--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "bcrypt": "^5.1.1",
     "framer-motion": "^11.0.5",
     "mongoose": "^8.3.1",
-    "next": "14.1.0",
+    "next": "^14.2.16",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
